change deprecated new Double() to Double.valueOf(), tweak properties